--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,11 +1,11 @@
 {
-    "name": "myapp",
-    "short_name": "myapp",
+    "name": "XTermux",
+    "short_name": "XTermux",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#0175C2",
-    "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
+    "background_color": "#00C853",
+    "theme_color": "#00C853",
+    "description": "XTermux - Termux Information, Package Sources & Setup Guide",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
